--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
 spring.flyway.repair=true
+spring.flyway.repair-on-migrate=true
+
 
 
 spring.cache.type=${SPRING_CACHE_TYPE:caffeine}
@@ -26,7 +28,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.security.enable-csrf=false
 
-logging.level.root=INFO
+logging.level.root=DEBUG
 logging.level.org.springframework=INFO
 logging.level.com.congregacao=DEBUG
 
