--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,21 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - postgres-network
+
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    container_name: my_pgadmin
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+#      PGADMIN_DEFAULT_PASSWORD: admin
+#    ports:
+#      - "5050:80"
+#    depends_on:
+#      - db
+#    networks:
+#      - postgres-network
 
   app:
     build: .
@@ -20,6 +35,12 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/congregacao_db
       SPRING_DATASOURCE_USERNAME: seu_usuario
       SPRING_DATASOURCE_PASSWORD: sua_senha
+    networks:
+      - postgres-network
 
 volumes:
   postgres_data:
+
+networks:
+  postgres-network:
+    driver: bridge
