--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,9 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:sua_senha}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-spring.flyway.locations=classpath:db/migration
-spring.flyway.enabled=true
-spring.flyway.repair=true
-spring.flyway.repair-on-migrate=true
-
-
 
 spring.cache.type=${SPRING_CACHE_TYPE:caffeine}
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
@@ -26,11 +19,9 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
-spring.security.enable-csrf=false
-
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.com.congregacao=DEBUG
-
-spring.jackson.date-format=yyyy-MM-dd
-spring.jackson.time-zone=UTC
+logging.level.org.hibernate=ERROR
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type=ERROR
