feat: add GitHub Actions for Java deployment to AKS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 server.port=8080
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/congregacao_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:seu_usuario}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:sua_senha}
+spring.datasource.url=jdbc:postgresql://${AZURE_POSTGRES_SERVER}:5432/postgres
+spring.datasource.username=${AZURE_POSTGRES_USER}
+spring.datasource.password=${AZURE_POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
