--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Configurar AKS e Kubectl
         run: |
-          az aks get-credentials --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name myAKSCluster
+          az aks get-credentials --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name aks-spring-prd-br
 
       - name: Construir e Enviar Docker para GHCR
         run: |
