--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
             --username ${{ secrets.AZURE_CLIENT_ID }} \
             --password ${{ secrets.AZURE_CLIENT_SECRET }} \
             --tenant ${{ secrets.AZURE_TENANT_ID }}
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Login no Azure Container Registry (ACR)
+        run: echo "${{ secrets.ACR_PASSWORD }}" | docker login acrprdbr001.azurecr.io -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
       - name: Configurar AKS e Kubectl
         run: |
@@ -37,11 +41,15 @@ jobs:
       - name: Construir aplicação com Maven
         run: mvn clean package -DskipTests
 
-      - name: Construir e Enviar Docker para GHCR
+      - name: Construir e Enviar Docker para ACR
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker build -t ghcr.io/aqs-digital-services/congregacao-java:latest .
-          docker push ghcr.io/aqs-digital-services/congregacao-java:latest
+          IMAGE_NAME="acrprdbr001.azurecr.io/congregacao-java:latest"
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
+
+      - name: Atualizar imagem no AKS
+        run: |
+          kubectl set image deployment/congregacao-java congregacao-java=acrprdbr001.azurecr.io/congregacao-java:latest --namespace default
 
       - name: Aplicar Configuração no AKS
         run: |
