--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
             --tenant ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Login no Azure Container Registry (ACR)
-        run: echo "${{ secrets.ACR_PASSWORD }}" | docker login acrprdbr001.azurecr.io -u ${{ secrets.ACR_USERNAME }} --password-stdin
+      - name: Autenticar no ACR via Azure CLI
+        run: az acr login --name acrprdbr001
 
       - name: Configurar AKS e Kubectl
         run: |
